# llm_rl_training

./: .gitignore  pyproject.toml  requirements.txt
src/: prompts.py  trainer.py
src/environements/: env.py  math_expression_generator.py  parser.py  rewarder.py
src/generation/: generator.py  generator_output.py  greedy_generator.py  guided_generator.py
src/generation/generation_strategy/: base.py  greedy.py
