[project]
name = "llm-rl-training"
version = "0.1.0"
description = ""
authors = [
    {name = "briag1",email = "briag.rehel@hotmail.fr"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "transformers (>=4.50.3,<5.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "ipywidgets (>=8.1.5,<9.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "torch (==2.2.2)",
    "gymnasium (>=1.1.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]
[tool.poetry]
packages = [
    { include = "src" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
